--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
       <%= link_to rubyists_path do %>
         <%= create_asset_image_template({image_asset_code: "programing_is_fun!_as_rubyist", class: "home-page-image"}) %>
       <% end %>
-      <%= link_to "Programing is fun! as Rubyist", rubyists_path, class: "main-link" %>
+      <%= link_to "Rubyist", rubyists_path, class: "main-link" %>
   </div>
 </div>
 <!-- /.row -->
@@ -38,10 +38,10 @@
   </div>
 
   <div class="col-md-3 portfolio-item main-page-image">
-    <%= link_to studies_path do %>
+    <%= link_to about_index_path do %>
       <%= create_asset_image_template({image_asset_code: "contact", class: "home-page-image"}) %>
     <% end %>
-    <%= link_to "Studies", studies_path, class: "main-link" %>
+    <%= link_to "Contact", about_index_path, class: "main-link" %>
   </div>
   <div class="col-md-3 portfolio-item main-page-image">
     <%= link_to blogs_path do %>
