--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,7 +4,7 @@
   <div class="col-lg-10">
     <form action="" method="get">
       <div class="input-group">
-        <input type="text" name="search" value="<%= params[:search] %>" class="form-control" placeholder="Sunspot:Solr Search for...">
+        <input type="text" name="search" value="<%= params[:search] %>" class="form-control" placeholder="Type to search">
         <span class="input-group-btn">
           <button class="btn btn-default" type="submit">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
