--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,13 +15,10 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-left">
           <li>
-            <%= link_to "Programing is fun! as Rubyist", rubyists_path, class: "#{'active' if params[:controller] == 'rubiests'}" %>
+            <%= link_to "Rubyist", rubyists_path, class: "#{'active' if params[:controller] == 'rubyists'}" %>
           </li>
           <li>
             <%= link_to "Solutions", topics_path, class: "#{'active' if ["topics", "problems"].include?(params[:controller])}" %>
-          </li>
-          <li>
-            <%= link_to "Studies", studies_path, class: "#{'active' if params[:controller] == 'studies'}" %>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle <%= more_nav_active_class %>" data-toggle="dropdown">More<b class="caret"></b></a>
